--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,16 @@
   <title>To Do List</title>
 </head>
 <body>
-  <h1>hello world</h1>
+  <form action="/create" method="post">
+    <input type="text" name="task" id="task" placeholder="Insira uma tarefa">
+    <button type="submit" id="addButton">Adicionar</button>
+  </form>
+
+  <ul>
+    <% tasksList.forEach((task) =>{ %>
+      <li><%= task.task %> | <%= task.date.toLocaleDateString('pt-BR') %></li>
+    <% }) %>
+  </ul>
 
   <script src="script.js"></script>
 </body>
