--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,17 +8,44 @@
   <title>To Do List</title>
 </head>
 <body>
-  <form action="/create" method="post">
-    <input type="text" name="task" id="task" placeholder="Insira uma tarefa">
-    <button type="submit" id="addButton">Adicionar</button>
-  </form>
+  <header>
+    <% if (task == null) { %>
+      <form action="/create" method="post">
+        <input type="text" name="task" id="task" placeholder="Insira uma tarefa">
+        <button type="submit" id="addButton">Adicionar</button>
+      </form>
+    <% } else { %>
+      <form action="/updateOne/<%= task._id %>" method="post">
+        <input type="text" name="task" id="task" value="<%= task.task %>">
+        <button type="submit" id="addButton">Atualizar</button>
+      </form>
+    <% } %>
+  </header>
 
-  <ul>
-    <% tasksList.forEach((task) =>{ %>
-      <li><%= task.task %> | <%= task.date.toLocaleDateString('pt-BR') %></li>
-    <% }) %>
-  </ul>
+  <section id="tasks">
+    <ul>
+      <% tasksList.forEach((task) =>{ %>
+        <li>
+          <%= task.task %> | <%= task.date.toLocaleDateString('pt-BR') %>
+          <a href="/getById/<%= task._id%>/update">Editar</a>
+          <a href="/getById/<%= task._id%>/delete">Apagar</a>
+        </li>
+      <% }) %>
+    </ul>
+  </section>
 
+  <% if (taskDelete != null) { %>
+  <section id="modal">
+    <div class="card">
+      <a href="/">x</a>
+      <h2>Confirmar</h2>
+      <hr>
+      <p>Deseja realmente apagar a tarefa: <%= taskDelete.task %>? </p>
+      <a href="/">Não</a>
+      <a href="/deleteOne/<%= taskDelete._id %>">Sim</a>
+    </div>
+  </section>
+  <% } %>
   <script src="script.js"></script>
 </body>
 </html>
