--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,20 +4,23 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
   <title>To Do List</title>
 </head>
 <body>
   <header>
     <% if (task == null) { %>
+      <h1>To Do List</h1>
       <form action="/create" method="post">
         <input type="text" name="task" id="task" placeholder="Insira uma tarefa">
         <button type="submit" id="addButton">Adicionar</button>
       </form>
     <% } else { %>
+      <h1>Editar Tarefa</h1>
       <form action="/updateOne/<%= task._id %>" method="post">
         <input type="text" name="task" id="task" value="<%= task.task %>">
-        <button type="submit" id="addButton">Atualizar</button>
+        <button type="submit" id="updateButton">Atualizar</button>
       </form>
     <% } %>
   </header>
@@ -26,9 +29,16 @@
     <ul>
       <% tasksList.forEach((task) =>{ %>
         <li>
-          <%= task.task %> | <%= task.date.toLocaleDateString('pt-BR') %>
-          <a href="/getById/<%= task._id%>/update">Editar</a>
-          <a href="/getById/<%= task._id%>/delete">Apagar</a>
+          <div>
+            <a href="/">
+              <%= task.task %>
+            </a>
+            <span>Criado em <%= task.date.toLocaleDateString('pt-BR') %></span>
+          </div>
+            <div>
+              <a class="btnUpdate" href="/getById/<%= task._id%>/update"><i class="bi bi-pencil-square"></i></a>
+              <a class="btnDelete" href="/getById/<%= task._id%>/delete"><i class="bi bi-trash3"></i></a>
+            </div>
         </li>
       <% }) %>
     </ul>
@@ -36,13 +46,19 @@
 
   <% if (taskDelete != null) { %>
   <section id="modal">
-    <div class="card">
-      <a href="/">x</a>
-      <h2>Confirmar</h2>
+    <div id="card">
+      <div id="head">
+        <h2>Confirmar</h2>
+        <a id="close" href="/">
+          <i class="bi bi-x"></i>
+        </a>
+      </div>
       <hr>
       <p>Deseja realmente apagar a tarefa: <%= taskDelete.task %>? </p>
-      <a href="/">Não</a>
-      <a href="/deleteOne/<%= taskDelete._id %>">Sim</a>
+      <div id="btns">
+        <a id="btnNot" href="/">Não</a>
+        <a id="btnYes" href="/deleteOne/<%= taskDelete._id %>">Sim</a>
+      </div>
     </div>
   </section>
   <% } %>
