--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,12 @@
   <title>To Do List</title>
 </head>
 <body>
+  <% if (message != "") { %>
+  <section class="message message-<%= type %>">
+    <p><%= message %></p>
+    <span id="close-message"><i class="bi bi-x"></i></span>
+  </section>
+  <% } %>
   <header>
     <% if (task == null) { %>
       <h1>To Do List</h1>
